--- a/documentation/_layout/style.css
+++ b/documentation/_layout/style.css
@@ -169,22 +169,26 @@ table {
 	width: 100%; 
 	border: 1px solid #000000; 
 	empty-cells: hide;
-	border-spacing: 2px 1px;
+	border-spacing: 2px 2px;
 	margin-top: 5px;
 }
 
 td, th {
 	vertical-align:top;
-	border-top: 1px solid #cccccc;
-	border-bottom: 1px solid #cccccc;
 	margin: 0;
+	padding: 2px 5px 2px 5px;
 }
 
 tr:nth-child(2n+1) td {
 	background-color: #dddddd;
+	border-bottom: 1px solid #bbbbbb;
 }
 tr:nth-child(2n) td {
 	background-color: #eeeeee;
+	border-bottom: 1px solid #cccccc;
+}
+tr:nth-last-child(1) td {
+	border-bottom: none;
 }
 
 th {
@@ -193,7 +197,7 @@ th {
 	border-bottom: 2px solid #000000;
 }
 th.left {
-	border-bottom: 1px solid #cccccc;
+	border-bottom: 1px solid #ffffff;
 	border-right: 2px solid #000000;
 }
 
